samples/_failures_safe/1761006162_ffdb51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ec85bde.c: In function ‘main’:
./samples/SAFE/__tmp_0ec85bde.c:145:12: error: missing terminating " character
  145 |     printf("1. Add\n
      |            ^~~~~~~~~
./samples/SAFE/__tmp_0ec85bde.c:145:5: error: expected expression at end of input
  145 |     printf("1. Add\n
      |     ^~~~~~
./samples/SAFE/__tmp_0ec85bde.c:145:5: error: expected declaration or statement at end of input
